fix(web) - nav, sidebar spacing on project page

--- a/web/hoc/ProjectLayout/ProjectLayout.module.scss
+++ b/web/hoc/ProjectLayout/ProjectLayout.module.scss
@@ -18,7 +18,7 @@
 
   height: 100%;
 
-  padding: 30px 20px;
+  padding: 20px;
 }
 
 .projectInfo {
@@ -73,12 +73,6 @@
   justify-content: space-between;
   align-items: center;
 }
-.top {
-  border-bottom: 1px solid #e9e9e9;
-
-  width: 100%;
-  height: 95px;
-}
 
 .buttons {
   display: flex;
@@ -106,8 +100,8 @@
   align-items: center;
 
   border-radius: 10px;
-  height: 3.2rem;
-  width: 16rem;
+  height: 2.8rem;
+  width: 13rem;
 
   background-color: transparent;
   fill: #2d3748;
@@ -134,7 +128,7 @@
 .buttonTitle {
   margin-left: 20px;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 600;
   font-size: 17px;
   line-height: 30px;
 }
@@ -148,21 +142,19 @@
   border-bottom: 1px solid #e9e9e9;
 
   width: 100%;
-  height: 95px;
 
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 1rem 1.3rem;
 
   box-sizing: border-box;
 }
 .searchBar {
-  box-shadow: 0px 0px 5px #a6a6a6;
+  box-shadow: 0px 0px 5px #cccccc;
   border-radius: 5px;
 
   color: #9099a8;
 
-  width: 615px;
-  height: 45px;
+  width: 30rem;
+  height: 2.5rem;
 
   display: flex;
   flex-direction: row;
@@ -217,18 +209,18 @@
   justify-content: center;
   align-items: center;
 
-  width: 24px;
-  height: 24px;
+  width: 18px;
+  height: 18px;
 
   color: #9099a8;
 }
 .userIcon {
   display: block;
-  margin-left: 20px;
-  margin-right: 15px;
+  margin-left: 10px;
+  margin-right: 5px;
 
-  width: 50px;
-  height: 50px;
+  width: 2.3rem;
+  height: 2.3rem;
   border-radius: 50%;
 }
 .dropdownIcon {
@@ -236,8 +228,8 @@
   justify-content: center;
   align-items: center;
 
-  width: 12px;
-  height: 6px;
+  width: 8px;
+  height: 4px;
 
   margin-right: 20px;
 }
